# cookiecutter-wagtail-vix

./: .all-contributorsrc  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  cookiecutter.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  tasks.py
{{cookiecutter.project_slug}}/: .babelrc.js  .coveragerc  .dockerignore  .editorconfig  .env.sample  .eslintrc  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .stylelintignore  .stylelintrc.json  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  Gruntfile.js  LICENSE  Makefile  Pipfile  Procfile  README.md  README.rst  app.json  conftest.py  docker-compose.yml  gulpfile.js  manage.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  tasks.py  webpack.config.js
{{cookiecutter.project_slug}}/#backups/: README.rst
{{cookiecutter.project_slug}}/#envs/: .gitignore  env_dev.example  env_prod.example  env_test.example
{{cookiecutter.project_slug}}/#envs/celery/: example_celery-project  example_celery-project.service  example_celerybeat-project.service
{{cookiecutter.project_slug}}/#envs/nginx/: example_nginx_https.conf  example_nginx_no-https.conf
{{cookiecutter.project_slug}}/#envs/uwsgi/: example.ini
{{cookiecutter.project_slug}}/#logs/: README.rst
{{cookiecutter.project_slug}}/#research/: README.rst
{{cookiecutter.project_slug}}/#resources/: README.rst
{{cookiecutter.project_slug}}/#vscode/: settings.json
{{cookiecutter.project_slug}}/.circleci/: config.yml
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md  renovate.json
{{cookiecutter.project_slug}}/.github/workflows/: gh-pages.yml  greetings.yml  main.yml
{{cookiecutter.project_slug}}/config/: urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  dev.py  production.py  test.py
{{cookiecutter.project_slug}}/docker/: Procfile  README.md  docker-compose-frontend.yml
{{cookiecutter.project_slug}}/docker/db/: Dockerfile  create.sql
{{cookiecutter.project_slug}}/docs/: Makefile  architecture.md  conf.py  configuration.md  deployment.md  dev-setup.md  frontend.md  index.md  index.rst  introduction.md  maintenance.md  make.bat  project-structure.md  references.md  testing.md
{{cookiecutter.project_slug}}/docs/images/: architecture.excalidraw
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  conftest.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/assets/js/: main.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/assets/scss/: main.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/assets/scss/abstracts/: _custom_bootstrap_vars.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/assets/scss/base/: _base.scss  _typography.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/: apps.py  blocks.py  models.py  tests.py  views.py  wagtail_hooks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/fixtures/: data.json
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/migrations/: 0001_initial.py  0002_alter_people_id.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/base/templatetags/: people_tags.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/blog/: apps.py  models.py  rss_feed_display.py  tests.py  wagtail_hooks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/blog/migrations/: 0001_initial.py  0002_alter_articletag_id.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/contact/: apps.py  forms.py  models.py  tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/contact/migrations/: 0001_initial.py  0002_auto_20210720_2229.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/: apps.py  views.py  wagtail_hooks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/core/tests/: test_search.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/home/: apps.py  factories.py  models.py  tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/home/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/home/tests/: test_factories.py  test_models.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/settings/: base.py  dev.py  production.py  test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/css/: main.css  main.min.css  {{cookiecutter.project_slug}}.css
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/js/: {{cookiecutter.project_slug}}.js
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/static/scss/: main.scss
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: 400.html  403.html  404.html  500.html  base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/blocks/: blockquote.html  embed_block.html  heading_block.html  image_block.html  paragraph_block.html  table_block.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/includes/: footer.html  navbar.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/maintenance_mode/: 503.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/nginx/: custom_403.html  custom_404.html  custom_500.html  custom_502.html  custom_503.html  custom_504.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/wagtailadmin/: home.html  login.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/tests/: factories.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  apps.py  factories.py  forms.py  models.py  tests.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: test_factories.py
(+43 files in other folders)
