[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
    | \{\{cookiecutter\.project_slug\}\}
  )/
)
'''

[tool.commitizen]
version = "0.2.2"
version_files = [
    "cookiecutter.json",
]
tag_format = "v$major.$minor.$patch"
annotated_tag = true
update_changelog_on_bump = false
# changelog_file = "CHANGELOG.md"
# changelog_incremental = true
