[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | (.*)/migrations
    | dist
    | \{\{cookiecutter\.project_slug\}\}
  )/
)
'''

[bumpver]
current_version = "v2021.12.09"
version_pattern = "vYYYY.0M.0D[-TAG]"
commit_message = "bump: ✈️ {old_version} → {new_version}"
commit = true
tag = false
push = false

[bumpver.file_patterns]
"package.json" = [
    '"version": "{version}"',
]
"cookiecutter.json" = [
    '"version": "{version}"',
]
# "pyproject.toml" = [
#     'version = "{version}"',
# ]
